[package]
name = "garp"
version = "0.1.0"
edition = "2024"

[features]
default = ["non-local"]
non-local = []

[dependencies]
windows-core = { version = "0.58", default-features = false }
windows = { version = "0.58", default-features = false, features = [
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi_Common"
]}
