[package]
name = "garp"
version = "0.1.0"
edition = "2024"

[features]
default = ["non-local"]
non-local = []

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_Devices_Display",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_Xps",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Registry",
    "Win32_Storage_FileSystem",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
] }

[dev-dependencies]
fs_extra = "1.3"
